# skill-issue-2025

./: .gitignore  .gitmodules  LICENSE  README.md  \  build.sh  install.sh  requirements.txt  run.avi
esp32/: Pins.h  adc.cpp  adc.h  claw.cpp  claw.h  color.cpp  color.h  esp32.ino  fadc.cpp  fadc.h  gyro.cpp  gyro.h  icons.cpp  icons.h  lightsensor.cpp  lightsensor.h  linefollower.cpp  linefollower.h  menu.cpp  menu.h  motor.cpp  motor.h  neue Datei  room.cpp  room.h  rpi_com.cpp  rpi_com.h  shared.h  shiftregister.cpp  shiftregister.h  tof.cpp  tof.h  warnings.h
esp32/.ipynb_checkpoints/: claw-checkpoint.cpp
raspi/: LossAndAccuracy.eps  VictimAI.sh  ball_detection_ai.ipynb  ball_detection_uint8.tflite  baller.py  convert.py  convert2.py  corners.py  generate_test.py  kmeans.py  main.py  object-detection-for-beginners-ball-detection.ipynb  opencv-test.py  take_images.py
raspi-cpp/: CMakeLists.txt  find_victim.cpp  find_victim.hpp  globals.cpp  globals.hpp  i2c.cpp  i2c.hpp  kmeans.cpp  kmeans.hpp  layout.cpp  main-backup.cpp  main.cpp  maincorner-backup.cpp  shared.hpp  video_exporter.hpp
raspi/.ipynb_checkpoints/: ball_detection_ai-checkpoint.ipynb  object-detection-for-beginners-ball-detection-checkpoint.ipynb
raspi/generated_tests/ball_simple_one/: df.csv
raspi/images/: README.dataset.txt  README.roboflow.txt
raspi/images/test/: _annotations.csv  dataset.csv  dataset2.csv
raspi/images/train/: _annotations.csv  dataset.csv  dataset2.csv
raspi/images/valid/: _annotations.csv  dataset.csv
raspi/tensorflow_keras/: main.py
